<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddCostSheetActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/title_add_cost_sheet"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/title_date_section"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_begin_date"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/beginDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_date_hint"
                android:inputType="date"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_end_date"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/endDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_date_hint"
                android:inputType="date"
                android:minHeight="48dp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/gsb_blue" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/title_transport_section"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Switch
                android:id="@+id/switchTransportInput"
                android:layout_width="114dp"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/switch_car_text"
                android:textColorHighlight="@color/gsb_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/kmInputTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_km"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/kmInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/input_km_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/InputMontantTransportAutreTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_transport_autre_montant"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/InputMontantTransportAutre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/input_transport_autre_montant_hint"
                android:inputType="numberDecimal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/InputFileTransportAutreTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_autre_file"
                android:textSize="16sp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/InputFileTransportAutre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_autre_file_btn"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/transportFileImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/gsb_blue" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/title_hebergement_section"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_hebergement_number"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/herbergementNumberInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_hebergement_number_hint"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_hebergement_price"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/hebergementPriceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_hebergement_price_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/gsb_blue" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/title_alimentation_section"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_alimentation_number"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/alimentationNumberInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_alimentation_number_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_alimentation_price"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/alimentationPriceInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_alimentation_price_hint"
                android:inputType="numberDecimal" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/gsb_blue" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/title_autre_section"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_autre_libelle"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/autreLibelleInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_autre_libelle_hint"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_autre_montant"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/autreMontantInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/title_autre_montant_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_autre_file"
                android:textSize="16sp" />

            <Button
                android:id="@+id/autreFileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_autre_file_btn" />

            <ImageView
                android:id="@+id/otherFileImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/gsb_blue" />

            <Button
                android:id="@+id/submitNewCostSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/button_new_cost_sheet" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/gsb_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemActiveIndicatorStyle="@style/Theme.ConnexionGSB"
        app:menu="@menu/menu_navigation"
        tools:layout_editor_absoluteX="0dp" />



</androidx.constraintlayout.widget.ConstraintLayout>