<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".activities.DashboardVisitorActivity">

  <TextView
      android:id="@+id/titleNameDashboard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/base_title_name_dashboard"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@+id/linearLayoutCostSheet"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:layout_constraintVertical_bias="0.092">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textView4"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/title_montant_total"
          android:textAlignment="textStart"
          android:textSize="12sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/title_refund_total"
          android:textAlignment="textStart"
          android:textSize="12sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/title_statut"
          android:textAlignment="textStart"
          android:textSize="12sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/title_action"
          android:textSize="12sp"
          android:textStyle="bold" />
    </LinearLayout>
  </LinearLayout>

  <TextView
      android:id="@+id/textView3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/title_your_cost_sheet"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/titleNameDashboard"
      app:layout_constraintVertical_bias="0.08" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/addCostSheetButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>